start on navigation

--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -1,1 +1,16 @@
 
+<nav role="navigation" class="navigation">
+
+    <a class="logo" href="/">
+        <img src="images/ohio-chart.svg" width="42" />
+    </a>
+
+    <a href="/events">Events</a>
+    <a href="/blog">Blog</a>
+    <a href="/data">Data</a>
+    <a href="/tools">Tools</a>
+    <a href="/sponsors">Sponsors</a>
+    <a href="/jobs">Job Board</a>
+    <a href="/about">About</a>
+
+</nav>
