--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -2,7 +2,7 @@
 <nav role="navigation" class="navigation">
 
     <a class="logo" href="/">
-        <img src="images/ohio-chart.svg" width="42" />
+        <img src="images/logo.svg" width="42" />
     </a>
 
     <a href="/events">Events</a>
