--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -8,6 +8,8 @@
 
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
 
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:700|Merriweather:400,700italic,400italic,700' rel='stylesheet' type='text/css' />
+
     <link rel="stylesheet" href="/styles/site.min.css" />
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
