--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -7,6 +7,7 @@ $nav-height: 50px;
     align-items: center;
     border-bottom: 2px solid #f00;
     display: flex;
+    font-family: $font-heading;
     justify-content: flex-start;
     padding: 0.25em 1.0em;
 
