--- a/src/sass/defaults/_typography.scss
+++ b/src/sass/defaults/_typography.scss
@@ -1,12 +1,10 @@
-h1, h2, h3, h4, h5 {
-  font-family: "Lato";
-  line-height: 1.5;
-}
 
-p {
-  font-family: "Merriweather";
-  font-size: modular-scale(1);
-  line-height: 1.3;
+$font-heading: 'Montserrat', sans-serif;
+$font-body: 'Merriweather', serif;
+
+h1, h2, h3, h4, h5 {
+  font-family: $font-heading;
+  line-height: 1.5;
 }
 
 h1 {
