Animated svg logo

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 @import 'defaults/colors',
         'defaults/typography',
         'defaults/tags',
+        'components/logo',
         'components/navigation',
         'pages/main'
 ;
