--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -1,31 +1,7 @@
 
 <nav role="navigation" class="navigation">
 
-    <a class="navlogo" href="/">
-
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 216 216">
-            <title>Dayton Data Visualization Logo</title>
-            <defs>
-                <linearGradient y1="10%" y2="80%" id="orange2red">
-                    <stop stop-color="#FF871C" offset="0%"></stop>
-                    <stop stop-color="#ED2224" offset="100%"></stop>
-                </linearGradient>
-            </defs>
-            <g>
-                <rect x="5" y="16.145" fill="url(#orange2red)" width="14.158" height="162.129"/>
-                <rect x="26.291" y="16.145" fill="url(#orange2red)" width="14.158" height="169.129"/>
-                <rect x="47.582" y="16.145" fill="url(#orange2red)" width="14.158" height="183.292"/>
-                <rect x="68.873" y="23.187" fill="url(#orange2red)" width="14.158" height="183.25"/>
-                <rect x="90.164" y="37.352" fill="url(#orange2red)" width="14.158" height="162.085"/>
-                <rect x="111.455" y="44.353" fill="url(#orange2red)" width="14.158" height="169.167"/>
-                <rect x="132.748" y="37.352" fill="url(#orange2red)" width="14.158" height="155.006"/>
-                <rect x="154.039" y="23.145" fill="url(#orange2red)" width="14.158" height="148.083"/>
-                <rect x="175.33" y="16.145" fill="url(#orange2red)" width="14.158" height="133.628"/>
-                <rect x="196.621" y="2" fill="url(#orange2red)" width="14.158" height="119.773"/>
-            </g>
-        </svg>
-
-    </a>
+    <a class="navlogo" href="/">{% include logo.html %}</a>
 
     <a class="navlink" href="/events">Events</a>
     <a class="navlink" href="/blog">Blog</a>
