--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -3,10 +3,12 @@
 
     <a class="navlogo" href="/">{% include logo.html %}</a>
 
+    <a class="navlink" href="/">Home</a>
     <a class="navlink" href="/events">Events</a>
     <a class="navlink" href="/blog">Blog</a>
     <a class="navlink" href="/data">Data</a>
     <a class="navlink" href="/tools">Tools</a>
+    <a class="navlink" href="/speaking">Speaking</a>
     <a class="navlink" href="/sponsors">Sponsors</a>
     <a class="navlink" href="/jobs">Job Board</a>
     <a class="navlink" href="/about">About</a>
