--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -4,11 +4,13 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
 
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:700|Merriweather:400,700italic,400italic,700' rel='stylesheet' type='text/css' />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Merriweather:400,700italic,400italic,700" rel="stylesheet" type="text/css" />
 
     <link rel="stylesheet" href="/styles/site.min.css" />
 
