--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,7 +5,10 @@
 
 <body>
 
-    {% include navigation.html %}
+    <header>
+        {% include navigation.html %}
+    </header>
+
 
     {{ content }}
 
