--- a/src/sass/defaults/_colors.scss
+++ b/src/sass/defaults/_colors.scss
@@ -1,4 +1,5 @@
-
-    $clr-red: #ED2224;
+$clr-light: #e0e3e6;
+$clr-dark: #202326;
+$clr-red: #ED2224;
 $clr-blue_dk: #111D1F;
- $clr-yellow: #EBD3A3;
+$clr-yellow: #EBD3A3;
