--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,7 @@
 @import 'defaults/colors',
         'defaults/typography',
         'defaults/tags',
+        'components/header',
         'components/logo',
-        'components/navigation',
         'pages/main'
 ;
