--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -2,7 +2,7 @@
 <nav role="navigation" class="navigation">
 
     <a class="navlogo" href="/">{% include logo.html %}</a>
-
+<!-- 
     <a class="navlink" href="/">Home</a>
     <a class="navlink" href="/events">Events</a>
     <a class="navlink" href="/blog">Blog</a>
@@ -11,6 +11,6 @@
     <a class="navlink" href="/speaking">Speaking</a>
     <a class="navlink" href="/sponsors">Sponsors</a>
     <a class="navlink" href="/jobs">Job Board</a>
-    <a class="navlink" href="/about">About</a>
+    <a class="navlink" href="/about">About</a> -->
 
 </nav>
