--- a/src/_includes/logo.html
+++ b/src/_includes/logo.html
@@ -1,4 +1,8 @@
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 216 216" class="logo ddv">
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+    x="0px" y="0px"
+    width="1025px" height="425px"
+    viewBox="0 0 1025 425"
+    class="logo">
     <title>Dayton Data Visualization Logo</title>
     <defs>
         <linearGradient y1="5%" y2="95%" x1="0" x2="0" id="steady">
@@ -38,27 +42,33 @@
         </linearGradient>
     </defs>
     <g class="animating">
-        <rect fill="url(#anim1)" x="5" y="16.145" width="14.158" height="162.129" />
-        <rect fill="url(#anim2)"x="26.291" y="16.145" width="14.158" height="169.129" />
-        <rect fill="url(#anim3)"x="47.582" y="16.145" width="14.158" height="183.292" />
-        <rect fill="url(#anim4)"x="68.873" y="23.187" width="14.158" height="183.25" />
-        <rect fill="url(#anim5)"x="90.164" y="37.352" width="14.158" height="162.085" />
-        <rect fill="url(#anim1)"x="111.455" y="44.353" width="14.158" height="169.167" />
-        <rect fill="url(#anim2)"x="132.748" y="37.352" width="14.158" height="155.006" />
-        <rect fill="url(#anim3)"x="154.039" y="23.145" width="14.158" height="148.083" />
-        <rect fill="url(#anim4)"x="175.33" y="16.145" width="14.158" height="133.628" />
-        <rect fill="url(#anim2)"x="196.621" y="2" width="14.158" height="119.773" />
+        <rect fill="url(#anim1)" x="25" y="49.925" width="24.949" height="285.69"/>
+        <rect fill="url(#anim2)" x="62.518" y="49.925" width="24.949" height="298.025"/>
+        <rect fill="url(#anim3)" x="100.034" y="49.925" width="24.949" height="322.987"/>
+        <rect fill="url(#anim4)" x="137.552" y="62.335" width="24.949" height="322.909"/>
+        <rect fill="url(#anim5)" x="175.067" y="87.298" width="24.947" height="285.614"/>
+        <rect fill="url(#anim1)" x="212.585" y="99.632" width="24.949" height="298.093"/>
+        <rect fill="url(#anim2)" x="250.105" y="87.298" width="24.949" height="273.136"/>
+        <rect fill="url(#anim3)" x="287.623" y="62.259" width="24.949" height="260.94"/>
+        <rect fill="url(#anim4)" x="325.139" y="49.925" width="24.949" height="235.47"/>
+        <rect fill="url(#anim2)" x="362.657" y="25" width="24.949" height="211.056"/>
     </g>
-    <g class="steady">
-        <rect x="5" y="16.145" fill="url(#steady)" width="14.158" height="162.129" />
-        <rect x="26.291" y="16.145" fill="url(#steady)" width="14.158" height="169.129" />
-        <rect x="47.582" y="16.145" fill="url(#steady)" width="14.158" height="183.292" />
-        <rect x="68.873" y="23.187" fill="url(#steady)" width="14.158" height="183.25" />
-        <rect x="90.164" y="37.352" fill="url(#steady)" width="14.158" height="162.085" />
-        <rect x="111.455" y="44.353" fill="url(#steady)" width="14.158" height="169.167" />
-        <rect x="132.748" y="37.352" fill="url(#steady)" width="14.158" height="155.006" />
-        <rect x="154.039" y="23.145" fill="url(#steady)" width="14.158" height="148.083" />
-        <rect x="175.33" y="16.145" fill="url(#steady)" width="14.158" height="133.628" />
-        <rect x="196.621" y="2" fill="url(#steady)" width="14.158" height="119.773" />
+    <g class="steady" fill="url(#steady)">
+        <rect x="25" y="49.925" width="24.949" height="285.69"/>
+        <rect x="62.518" y="49.925" width="24.949" height="298.025"/>
+        <rect x="100.034" y="49.925" width="24.949" height="322.987"/>
+        <rect x="137.552" y="62.335" width="24.949" height="322.909"/>
+        <rect x="175.067" y="87.298" width="24.947" height="285.614"/>
+        <rect x="212.585" y="99.632" width="24.949" height="298.093"/>
+        <rect x="250.105" y="87.298" width="24.949" height="273.136"/>
+        <rect x="287.623" y="62.259" width="24.949" height="260.94"/>
+        <rect x="325.139" y="49.925" width="24.949" height="235.47"/>
+        <rect x="362.657" y="25" width="24.949" height="211.056"/>
     </g>
+    <text class="text" transform="matrix(1 0 0 1 457.1113 108.7378)">
+        <tspan x="0" y="0" font-family="'TimesNewRomanPSMT'" font-size="100.0883" letter-spacing="2">dayton</tspan>
+        <tspan x="0" y="100.088" font-family="'TimesNewRomanPSMT'" font-size="100.0883" letter-spacing="2">data</tspan>
+        <tspan x="0" y="200.177" font-family="'TimesNewRomanPSMT'" font-size="100.0883" letter-spacing="2">visualization</tspan>
+    </text>
+    <text class="text-ddv" transform="matrix(1 0 0 1 350 375.0005)" font-family="'TimesNewRomanPSMT'" font-size="100.0883" letter-spacing="2">ddv.</text>
 </svg>
