--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -4,7 +4,7 @@ header {
     color: $clr-light;
 }
 
-$nav-height: 50px;
+//$nav-height: 50px;
 
 .navigation {
     @include outer-container(100%);
@@ -19,13 +19,10 @@ $nav-height: 50px;
         justify-content: center;
     }
 
-    svg {
-        height: 42px;
-    }
-
     .navlogo {
         background: none;
         border: none;
+        outline: none;
     }
 
     .navlink {
