--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -23,6 +23,7 @@ header {
         background: none;
         border: none;
         outline: none;
+        text-decoration: none;
     }
 
     .navlink {
