header and navigation layout

--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -1,8 +1,28 @@
 
-<nav role="navigation" class="navigation">
 
-    <a class="navlogo" href="/">{% include logo.html %}</a>
-<!-- 
+<div role="navigation" class="navigation">
+
+    <div class="navheader">
+        <a>Menu</a>
+    </div>
+
+    <div class="navcols">
+        <div class="navcol">
+            <div><a class="navlink" href="/">Home</a></div>
+            <div><a class="navlink" href="/">Home</a></div>
+            <div><a class="navlink" href="/">Home</a></div>
+            <div><a class="navlink" href="/">Home</a></div>
+        </div>
+
+        <div class="navcol">
+            <div><a class="navlink" href="/">Home</a></div>
+            <div><a class="navlink" href="/">Home</a></div>
+            <div><a class="navlink" href="/">Home</a></div>
+            <div><a class="navlink" href="/">Home</a></div>
+        </div>
+    </div>
+
+<!--
     <a class="navlink" href="/">Home</a>
     <a class="navlink" href="/events">Events</a>
     <a class="navlink" href="/blog">Blog</a>
@@ -13,4 +33,4 @@
     <a class="navlink" href="/jobs">Job Board</a>
     <a class="navlink" href="/about">About</a> -->
 
-</nav>
+</div>
