--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,10 +5,7 @@
 
 <body>
 
-    <header>
-        {% include navigation.html %}
-    </header>
-
+    {% include header.html %}
 
     {{ content }}
 
