--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,45 +1,68 @@
 
-header {
+.header {
+    align-items: stretch;
     background: $clr-dark;
+    //background-image: linear-gradient(to bottom, rgba(0, 6, 12, 0.75), rgba(0, 0, 0, 0.75)), url(../images/unsplash-code01.jpg);
+    background-image: url(../images/unsplash-code01.jpg);
+    background-position: center top;
+    background-size: cover;
     color: $clr-light;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    //filter: grayscale(70%);
+
+    min-height: 400px;
+
+    .feature {
+        flex-grow: 1;
+    }
+
+    .nav-ctr {
+        width: 400px;
+    }
 }
 
-//$nav-height: 50px;
-
 .navigation {
-    @include outer-container(100%);
-
-    align-items: center;
+    background: #101316;
     display: flex;
-    font-family: $font-heading;
-    justify-content: flex-start;
-    padding: 0.25em 1.0em;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 100%;
 
-    a {
-        justify-content: center;
+    .navheader {
+        padding: 1.0em;
+        text-align: right;
     }
 
-    .navlogo {
-        background: none;
-        border: none;
-        outline: none;
-        text-decoration: none;
-    }
+    .navcols {
+        align-items: top;
+        display: flex;
+        flex-direction: row;
+        flex-grow: 1;
+        flex-wrap: nowrap;
 
-    .navlink {
-        //background-color: rgba(#fff, 0.05);
-        //border-radius: 0.25em;
-        //color: $clr-yellow;
-        font-size: 0.85em;
-        letter-spacing: 0.075em;
-        margin: 0.25em 0.5em;
-        padding: 0.5em 1.0em;
-        text-decoration: none;
-        text-shadow: 1px 1px 0 #000;
+        .navcol {
+            flex-grow: 1;
 
-        &:hover {
-            background-color: rgba(#fff, 0.15);
-            //color: #fff;
+            .navlink {
+                //box-sizing: border-box;
+                border-bottom: 1px solid #222;
+                color: #09c;
+                display: block;
+                font-family: $font-heading;
+                padding: 1.0em 1.0em;
+                text-decoration: none;
+            }
+            .navlink:hover {
+                background: #222;
+                color: #0cf;
+            }
         }
     }
+
+
+
+
+
 }
