--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -9,16 +9,16 @@
     <div class="navcols">
         <div class="navcol">
             <div><a class="navlink" href="/">Home</a></div>
-            <div><a class="navlink" href="/">Home</a></div>
-            <div><a class="navlink" href="/">Home</a></div>
-            <div><a class="navlink" href="/">Home</a></div>
+            <div><a class="navlink" href="/">Events</a></div>
+            <div><a class="navlink" href="/">Blog</a></div>
+            <div><a class="navlink" href="/">Jobs</a></div>
         </div>
 
         <div class="navcol">
-            <div><a class="navlink" href="/">Home</a></div>
-            <div><a class="navlink" href="/">Home</a></div>
-            <div><a class="navlink" href="/">Home</a></div>
-            <div><a class="navlink" href="/">Home</a></div>
+            <div><a class="navlink" href="/">Tutorials</a></div>
+            <div><a class="navlink" href="/">Data</a></div>
+            <div><a class="navlink" href="/">Sponsors</a></div>
+            <div><a class="navlink" href="/">About</a></div>
         </div>
     </div>
 
