--- a/src/sass/defaults/_colors.scss
+++ b/src/sass/defaults/_colors.scss
@@ -1,5 +1,9 @@
 $clr-light: #e0e3e6;
 $clr-dark: #202326;
 $clr-red: #ED2224;
+$clr-red_alt: #A00708;
+$clr-blue: #0876BA;
+$clr-blue_alt: #0F69A0;
 $clr-blue_dk: #111D1F;
-$clr-yellow: #EBD3A3;
+$clr-yellow: #F0ED3A;
+$clr-yellow_dk: #EBD3A3;
