--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -12,25 +12,23 @@
             <div><a class="navlink" href="/">Events</a></div>
             <div><a class="navlink" href="/">Blog</a></div>
             <div><a class="navlink" href="/">Jobs</a></div>
+            <div><a class="navlink" href="/">Speakers</a></div>
         </div>
 
         <div class="navcol">
             <div><a class="navlink" href="/">Tutorials</a></div>
             <div><a class="navlink" href="/">Data</a></div>
             <div><a class="navlink" href="/">Sponsors</a></div>
+            <div><a class="navlink" href="/conduct">Code of Conduct</a></div>
             <div><a class="navlink" href="/">About</a></div>
         </div>
     </div>
 
-<!--
-    <a class="navlink" href="/">Home</a>
-    <a class="navlink" href="/events">Events</a>
-    <a class="navlink" href="/blog">Blog</a>
-    <a class="navlink" href="/data">Data</a>
-    <a class="navlink" href="/tools">Tools</a>
-    <a class="navlink" href="/speaking">Speaking</a>
-    <a class="navlink" href="/sponsors">Sponsors</a>
-    <a class="navlink" href="/jobs">Job Board</a>
-    <a class="navlink" href="/about">About</a> -->
-
+    <div class="navfooter">
+        <p>
+            <i class="fa fa-slack"></i>
+            Chat with us at the
+            <a href="http://www.opendayton.org">OpenDayton Slack Community</a>!
+        </p>
+    </div>
 </div>
