--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'reset/reset';
 @import 'bourbon/bourbon';
 @import 'neat/neat';
+@import 'font-awesome';
 
 // Defaults, Components, then Pages
 @import 'defaults/breakpoints',
