--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -2,7 +2,7 @@
 <header class="header">
 
     <div class="feature">
-        {% include logo.html %}
+        <a href="/">{% include logo.html %}</a>
     </div>
 
     <div class="nav-ctr">
