--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -7,6 +7,7 @@ $header-transition: all 0.5s;
     background-image: url(../images/unsplash-code02.jpg);
     background-position: center top;
     background-size: cover;
+    border-bottom: 1px solid #fff;
     color: $clr-light;
     display: flex;
     flex-direction: row;
