--- a/src/sass/defaults/_tags.scss
+++ b/src/sass/defaults/_tags.scss
@@ -3,7 +3,7 @@ body, html {
 }
 
 body {
-    font-family: $font-body;
+    background: $clr-light url(../images/handmadepaper2.png) top left repeat;
 }
 
 a {
