--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -3,7 +3,7 @@
 <div role="navigation" class="navigation">
 
     <div class="navheader">
-        <a>Menu</a>
+        <a><i class="fa fa-bars"></i> Menu</a>
     </div>
 
     <div class="navcols">
