--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
         'defaults/typography',
         'defaults/tags',
         'components/header',
+        'components/navbar',
         'components/logo',
         'pages/defaults'
 ;
