--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,7 +5,7 @@
 
 <body>
 
-    {% include header.html %}
+    <!-- {% include header.html %} -->
     {% include navbar.html %}
 
     <div class="content">
