added push-menu as a dependency

--- a/src/_includes/navbar.html
+++ b/src/_includes/navbar.html
@@ -5,7 +5,11 @@
     <!-- <div class="navbar__menu">
         <a id="navbar__menubtn"><i class="fa fa-bars"></i> Menu</a>
     </div> -->
-    <a class="navbar__menu">
+    <a class="navbar__menu" id="ddv-menu-btn">
         <i class="icon fa fa-bars"></i> Menu
     </a>
+</div>
+
+<div class="navpanel">
+
 </div>
