--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer class="site-footer">
 
-
+    <section class="footerlogo">
+        <a href="/">{% include logo.html %}</a>
+    </section>
 
 </footer>
