--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
         'defaults/typography',
         'defaults/tags',
         'components/header',
+        'components/footer',
         'components/navbar',
         'components/logo',
         'pages/defaults'
