--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -108,3 +108,35 @@ $navlogo-lg: 60px;
         width: $navlogo-lg * $ratio;
     }
 }
+
+$footlogo-sm: 72px;
+$footlogo-md: 128px;
+$footlogo-lg: 256px;
+.footerlogo .logo {
+    height: $footlogo-sm;
+    margin: 1.0em;
+    width: $footlogo-sm * $ratio;
+
+    @include animateOnHover();
+    @include baseLogoStyles();
+
+    .text {
+        display: block;
+    }
+    .text-ddv {
+        display: none;
+    }
+
+    @include media($tablet-portrait) {
+        height: $footlogo-md;
+        width: $footlogo-md * $ratio;
+    }
+    @include media($tablet-landscape) {
+        height: $footlogo-md;
+        width: $footlogo-md * $ratio;
+    }
+    @include media($desktop) {
+        height: $footlogo-lg;
+        width: $footlogo-lg * $ratio;
+    }
+}
