--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,7 +1,21 @@
-<footer class="site-footer">
+<footer class="footer">
 
-    <section class="footerlogo">
-        <a href="/">{% include logo.html %}</a>
-    </section>
+    <div class="footer__sections">
+        <section class="footerlogo">
+            <a href="/">{% include logo.html %}</a>
+        </section>
+
+        <section>
+
+        </section>
+
+        <section>
+
+        </section>
+    </div>
+
+    <div class="footer__copy">
+        
+    </div>
 
 </footer>
