more footer tweaks

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,21 +1,47 @@
 <footer class="footer">
 
     <div class="footer__sections">
+
+        <section class="footer__nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/events">Events</a></li>
+                <li><a href="/blog">Blog</a></li>
+                <li><a href="/jobs">Jobs</a></li>
+                <li><a href="/speakers">Speakers</a></li>
+                <li><a href="/tutorials">Tutorials</a></li>
+                <li><a href="/data">Data</a></li>
+                <li><a href="/sponsors">Sponsors</a></li>
+                <li><a href="/conduct">Code of Conduct</a></li>
+                <li><a href="/about">About</a></li>
+            </ul>
+        </section>
+
+        <section class="footer__about">
+            <p>
+                The Dayton Data Visualization group is a quarterly meetup for
+                data visualization practicioners in the Dayton, Ohio area.
+            </p>
+
+            <p>
+                This site was built with jekyll and is hosted using
+                github pages.
+                We could really use your help generating site content and
+                bug fixing. See a current list of items we need help
+                with on our github issues page.
+            </p>
+        </section>
+
         <section class="footerlogo">
             <a href="/">{% include logo.html %}</a>
+            <a href="https://github.com/daytondv" alt="GitHub"><i class="fa fa-github"></i></a>
+            <a href="https://twitter.com/daytondv" alt="Twitter"><i class="fa fa-twitter"></i></a>
         </section>
 
-        <section>
-
-        </section>
-
-        <section>
-
-        </section>
-    </div>
+    </div><!-- footer__sections -->
 
     <div class="footer__copy">
-        
+        &copy; 2016 Dayton Data Visualization
     </div>
 
 </footer>
