--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -17,18 +17,18 @@
             <div class="navcols">
                 <div class="navcol">
                     <div><a class="navlink" href="/">Home</a></div>
-                    <div><a class="navlink" href="/">Events</a></div>
-                    <div><a class="navlink" href="/">Blog</a></div>
-                    <div><a class="navlink" href="/">Jobs</a></div>
-                    <div><a class="navlink" href="/">Speakers</a></div>
+                    <div><a class="navlink" href="/events">Events</a></div>
+                    <div><a class="navlink" href="/blog">Blog</a></div>
+                    <div><a class="navlink" href="/jobs">Jobs</a></div>
+                    <div><a class="navlink" href="/speakers">Speakers</a></div>
                 </div>
 
                 <div class="navcol">
-                    <div><a class="navlink" href="/">Tutorials</a></div>
-                    <div><a class="navlink" href="/">Data</a></div>
-                    <div><a class="navlink" href="/">Sponsors</a></div>
+                    <div><a class="navlink" href="/tutorials">Tutorials</a></div>
+                    <div><a class="navlink" href="/data">Data</a></div>
+                    <div><a class="navlink" href="/sponsors">Sponsors</a></div>
                     <div><a class="navlink" href="/conduct">Code of Conduct</a></div>
-                    <div><a class="navlink" href="/">About</a></div>
+                    <div><a class="navlink" href="/about">About</a></div>
                 </div>
             </div>
 
