--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,10 +1,10 @@
 .footer {
     background: $clr-dark url(../images/dayton-skyline-banner.png) bottom center no-repeat;
     background-size: contain;
-    border-top: 1px solid #fff;
+    border-top: 2.0em solid lighten($clr-dark, 35%);
     color: $clr-light;
     min-height: 400px;
-
+    padding-top: 1.5em;
 }
 
 .footer__sections {
@@ -28,6 +28,27 @@
     }
 }
 
+.footer__nav {
+    text-align: center;
+
+    a {
+        background: lighten($clr-dark, 5%);
+        border-radius: 0.25em;
+        display: inline-block;
+        margin: 0.25em 0;
+        padding: 0.25em 0.5em;
+
+        &:hover {
+            background: lighten($clr-dark, 15%);
+        }
+    }
+}
+
 .footer__copy {
+    color: lighten($clr-dark, 35%);
+    font-family: $font-heading;
+    font-size: 65%;
+    padding: 1.5em;
+    padding-bottom: 0.5em;
     text-align: center;
 }
