--- a/src/sass/defaults/_typography.scss
+++ b/src/sass/defaults/_typography.scss
@@ -15,3 +15,12 @@ h1, h2, h3, h4, h5, h6 {
 h1, h2 {
     color: $clr-red_alt;
 }
+
+p {
+    line-height: 1.33em;
+}
+
+p+p {
+    text-indent: 0;
+    margin-top: -0.75rem;
+}
