more footer work

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -2,6 +2,50 @@
 
     <div class="footer__sections">
 
+        <section class="footer__logos">
+
+            <div class="footer__logo">
+                <a href="/">{% include logo.html %}</a>
+            </div>
+
+            <div class="footer__links">
+                <a href="http://meetup.com/daytondv"><img src="/images/meetup-logo.svg" /></a>
+                <a href="https://github.com/daytondv" alt="GitHub"><i class="fa fa-github"></i></a>
+                <a href="https://twitter.com/daytondv" alt="Twitter"><i class="fa fa-twitter"></i></a>
+                <a href="http://workatais.com"><img src="/images/sponsors/ais-white.png" alt="Applied Information Sciences" /></a>
+
+            </div>
+
+        </section>
+
+        <section class="footer__about">
+            <p>
+                The Dayton Data Visualization group is a quarterly meetup for
+                data visualization practicioners in the Dayton, Ohio area.
+            </p>
+
+            <p>
+                Join us on <a href="http://meetup.com/daytondv">Meetup.com</a>
+                to RSVP for our upcoming events and receive
+                news and announcements regarding the group!
+            </p>
+        </section>
+
+        <section class="footer__about">
+            <p>
+                This site was built with
+                <a href="https://jekyllrb.com">jekyll</a> and is hosted using
+                <a href="https://pages.github.com">github pages</a>.
+                We could really use your help generating site content and
+                bug fixing. See a current list of items we need help
+                with on our
+                <a href="https://github.com/daytondv/www.daytondv.com/issues">github issues page</a>.
+                Join the #daytondv channel on the
+                <a href="http://www.opendayton.org">OpenDayton Slack Community</a>
+                and we'll help you get started!
+            </p>
+        </section>
+
         <section class="footer__nav">
             <ul>
                 <li><a href="/">Home</a></li>
@@ -15,27 +59,6 @@
                 <li><a href="/conduct">Code of Conduct</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
-        </section>
-
-        <section class="footer__about">
-            <p>
-                The Dayton Data Visualization group is a quarterly meetup for
-                data visualization practicioners in the Dayton, Ohio area.
-            </p>
-
-            <p>
-                This site was built with jekyll and is hosted using
-                github pages.
-                We could really use your help generating site content and
-                bug fixing. See a current list of items we need help
-                with on our github issues page.
-            </p>
-        </section>
-
-        <section class="footerlogo">
-            <a href="/">{% include logo.html %}</a>
-            <a href="https://github.com/daytondv" alt="GitHub"><i class="fa fa-github"></i></a>
-            <a href="https://twitter.com/daytondv" alt="Twitter"><i class="fa fa-twitter"></i></a>
         </section>
 
     </div><!-- footer__sections -->
