--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,8 +5,8 @@
 
 <body>
 
-    <!-- {% include header.html %} -->
-    {% include navbar.html %}
+    {% include header.html %}
+    <!-- {% include navbar.html %} -->
 
     <div class="content">
         {{ content }}
